<resources>
    <string name="app_name">Control de Bombas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Revise_su_conexion">Revise su conexión a Internet e intente de nuevo</string>
    <string name="Reintentar">Reintentar</string>
    <string name="no_hay_productos_con_deficit">No hay productos con deficit</string>
    <string name="Ventas">Ventas</string>
    <string name="Buscar_cliente">Buscar cliente</string>
    <string name="fecha">Fecha</string>
    <string name="No_hay_clientes">No hay clientes</string>
    <string name="clientes">Clientes</string>
    <string name="Dia">Día</string>
    <string name="Mes">Mes</string>
    <string name="Anno">Año</string>
    <string name="todo">Todo</string>
    <string name="nombreS">Nombre:</string>
    <string name="fechaS">Fecha: </string>
    <string name="tipoS">Tipo: </string>
    <string name="numeroS">Número: </string>
    <string name="numero">Número </string>
    <string name="tipo">Tipo </string>
    <string name="Fecha_fill">%s/%s/%s</string>
    <string name="garant_a">Garantía: </string>
    <string name="sobre_nosotrosx">Sobre nosotros</string>
    <string name="about_dev">Sobre desarrolladores</string>
    <string name="Garantia">Garantía</string>
    <string name="ciS">CI:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="tipo_de_bomba_de_agua">Tipo de bomba de agua:</string>
    <string name="medida_del_copliS">Medida del coplin:</string>
    <string name="medida_del_imperenteS">Medida del impelente:</string>
    <string name="precio_de_c_bro">Precio de cobro:</string>
    <string name="descripci_n_del_trabajo">Descripción del trabajo:</string>
    <string name="descripci_n_cliente">Descripción cliente:</string>
    <string name="ci">CI</string>
    <string name="bomba">Bomba</string>
    <string name="copli">Coplin</string>
    <string name="imp">Imp</string>
    <string name="precio">Precio</string>
    <string name="cancelar">Cancelar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="seleccione_el_a_o_que_desea_filtrar">Seleccione el año que desea filtrar:</string>
    <string name="seleccione_el_mes_filtrar">Seleccione el mes por el que desea filtrar:</string>
    <string name="seleccione_el_dia_filtrar">Seleccione el día por el que desea filtrar</string>
    <string name="Eliminar_cliente">Eliminar cliente</string>
    <string name="Desea_eliminar_cliente">¿Desea realmente eliminar el cliente?</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Se_ha_producido_un_error">Se ha producido un error</string>
    <string name="Password">Contraseña</string>
    <string name="Start_session">Iniciar sesión</string>
    <string name="agregar_cliente">Agregar cliente</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="tipo_de_bomba">Tipo de bomba</string>
    <string name="medida_del_copli">Medida del coplin</string>
    <string name="medida_del_imperente">Medida del impelente</string>
    <string name="garantia">Garantía</string>
    <string name="descripcion_client">Descripción del cliente</string>
    <string name="descripcion_work">Descripción del trabajo</string>
    <string name="Este_campo_no_debe">Este campo no debe estar vacío</string>
    <string name="Contrasena_incorrecta">Contraseña incorrecta</string>
    <string name="sobre_nosotros">Sobre nosotros:</string>
    <string name="negocio_particular">Negocio particular</string>
    <string name="_53_58419241">+53 58419241</string>
    <string name="sobre_nosotros_desc">"Tenga una cordial bienvenida a El Retén, tu tienda de confianza para encontrar las mejores piezas del mercado. Nos especializamos en ofrecer una amplia selección de piezas de alta calidad para todo tipo de motores. En El Retén, nuestra misión es brindar a nuestros clientes un servicio excepcional y un conocimiento experto en dicha industria"</string>
    <string name="Acerca_de_nosotros">Sobre nosotros</string>
    <string name="El_reten">El Retén</string>
    <string name="direccion_negocio">Calzada de Luyanó, municipio 10 de Octubre, #727, e/ Concha y Porvenir, La Habana</string>
    <string name="q_necesitas">QNecesitas</string>
    <string name="productos_inform_ticos">Productos Informáticos</string>
    <string name="Nuestro_numero">+53 55759386</string>
    <string name="ronnynordelo_gmail_com">ronnynordelo@gmail.com</string>
    <string name="mision_nuestra">El enfoque que buscamos es el de una empresa acogedora, cuyos complicados servicios sean llevados a los clientes de forma fácil de comprender. Cuba es un país poco informatizado por lo que tenemos noción de que la mayoría de nuestros clientes conocen la importancia de llevar su negocio a las redes y la tecnología pero sus conocimientos de aplicaciones y páginas web son pocos o ninguno, así que si ese es su caso no se preocupe, solo tiene que decirnos alguna idea que tenga o la información que quiere informatizar y haremos magia.</string>
    <string name="qnecesitas_nat_cu">qnecesitas.nat.cu</string>
    <string name="https_www_facebook_com_qnecesitas_paginaprincipal">https://www.facebook.com/qnecesitas.paginaprincipal</string>
    <string name="misi_n">Misión:</string>
    <string name="Cambiar_contrase_as_admin">Cambiar contraseña</string>
    <string name="Contrase_a_actual">Contraseña actual</string>
    <string name="Contrase_nueva">Contraseña nueva</string>
    <string name="Contrase_a_confirmar">Confirme la nueva</string>
    <string name="Configuraci_n">Configuración</string>
    <string name="los_campos_no_coinciden">No coinciden la contraseña a confirmar y la nueva</string>
    <string name="opciones_de_base_de_datos">Opciones de Base de Datos</string>
    <string name="exportar_base_de_datos">Exportar Base de Datos</string>
    <string name="importar_base_de_datos">Importar Base de Datos</string>
    <string name="Guardar">Guardar</string>
    <string name="Guardar_cliente">Guardar cliente</string>
    <string name="Tiene_seguridad_guardar">¿Tiene la seguridad de guardar esta información?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="monto_cobrado">Monto cobrado</string>
    <string name="operacion_realizada_con_exito">Operación realizada con éxito</string>
    <string name="ajustes">Ajustes</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="salir">Salir</string>
    <string name="seguro_desea_salir">¿Desea salir de la aplicación?</string>
    <string name="Exportada_exito">Exportada con éxito</string>
    <string name="Ubicacion_bd">La Base de Datos fue exportada con éxito y se encuentra en el almacenamiento interno, en la carpeta Downloads, con el nombre: app_database.bd</string>
    <string name="permiso_denegado">Permiso denegado</string>
    <string name="debe_otorgar_permisos_galeria">Debe otorgar el permiso para poder exportar la Base de Datos</string>
    <string name="importado_exito">Importado con éxito</string>
    <string name="Debe_reiniciar">Debe cerrar completamente la aplicación y luego abrirla para ver los cambios y evitar errores</string>
    <string name="cup">CUP</string>
    <string name="monto_personalizado">Monto personalizado</string>
    <string name="pago">Pago</string>
    <string name="precio_aux">Precio auxiliar:</string>
    <string name="Editar_client">Editar cliente</string>
    <string name="bd_exportada_exito">Base de datos exportada con éxito</string>
    <string name="bd_exportada_error">Error al exportar la base de datos</string>
    <string name="bd_inportada_exito">Base de datos importada con éxito</string>
    <string name="bd_inportada_error">Error al inportar la base de datos</string>
</resources>