<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="@dimen/card_view_corner"
        android:translationZ="@dimen/card_view_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">


        <!--cl container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cvContainer"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!--iv User-->
            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/outline_account_circle_24"
                android:id="@+id/ivUserIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--tv name static-->
            <TextView
                android:id="@+id/tvClientS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/nombreS"
                android:textSize="@dimen/textSize_m"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/ivUserIcon"
                app:layout_constraintTop_toTopOf="parent" />


            <!--tv name-->
            <TextView
                android:id="@+id/tvClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/nombre"
                android:textSize="@dimen/textSize_m"
                app:layout_constraintStart_toEndOf="@id/tvClientS"
                app:layout_constraintTop_toTopOf="@id/tvClientS" />


            <!--tv Date Static-->
            <TextView
                android:id="@+id/tvDateS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaS"
                android:textSize="@dimen/textSize_m"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvClientS"
                app:layout_constraintTop_toBottomOf="@+id/tvClientS" />


            <!--tv Date-->
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fecha_fill"
                android:textSize="@dimen/textSize_m"
                app:layout_constraintStart_toEndOf="@id/tvDateS"
                app:layout_constraintTop_toTopOf="@+id/tvDateS" />


            <!--iv Close-->
            <ImageView
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/ivClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorControlNormal" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>